--- a/styles/RwaOracle.module.css
+++ b/styles/RwaOracle.module.css
@@ -17,3 +17,9 @@
     height: 100px;
     background-color: red;
 }
+
+.main h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+}
